workspace = { members = ["exemples/api_client"] }
[package]
name = "flow_helpers"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["logger", "web_server", "mongo", "flow", "websocket", "proc"]

mongo = [
  "mongodb",
  "serde",
  "bson",
  "async-trait",
  "futures",
  "serde_json",
  "proc",
]
logger = ["env_logger", "chrono"]
web_server = ["actix-web", "actix-cors", "serde", "serde_json", "proc"]
flow = ["flow_rs", "serde_json", "async-trait", "serde"]
websocket = ["actix-web-actors", "actix", "rand", "serde_json", "proc"]
proc_macro = ["proc"]
redis_client = ["redis"]

[lib]
name = "rust_helpers"

[dependencies]
# logger
log = { version = "0.4.20" }
chrono = { version = "0.4.33", optional = true }
env_logger = { version = "0.11.1", optional = true }

proc = { path = "proc", optional = true }

# web_server
actix-cors = { version = "0.7.0", optional = true }
actix-web = { version = "4.5.1", optional = true }

# mongo
mongodb = { version = "2.8.0", optional = true }
bson = { version = "2", features = ["chrono-0_4"], optional = true }
serde = { version = "1.0.196", optional = true, features = ["derive"] }
async-trait = { version = "0.1.77", optional = true }
futures = { version = "0.3.30", optional = true }

# flow
serde_json = { version = "1.0.113", optional = true }
flow_rs = { git = "https://github.com/barterYard/flow_rust", branch = "main", optional = true }

# websocket
actix-web-actors = { version = "4.3.0", optional = true }
actix = { version = "0.13.2", optional = true }
rand = { version = "0.8.5", optional = true }

# redis
redis = { version = "0.24.0", optional = true }
