[package]
name = "rust_helpers"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["logger", "web_server", "mongo", "websocket", "proc"]

mongo = [
  "mongodb",
  "serde",
  "bson",
  "async-trait",
  "futures",
  "serde_json",
  "proc",
]
logger = ["env_logger", "chrono"]
web_server = ["actix-web", "actix-cors", "serde", "serde_json", "proc"]
websocket = ["actix-web-actors", "actix", "rand", "serde_json", "proc"]
proc_macro = ["proc"]
redis_client = ["redis"]

[lib]
name = "rust_helpers"

[dependencies]
# logger
log = { version = "0.4.22" }
chrono = { version = "0.4.38", optional = true }
env_logger = { version = "0.11.5", optional = true }

proc = { path = "proc", optional = true }

# web_server
actix-cors = { version = "0.7.0", optional = true }
actix-web = { version = "4.9.0", optional = true }

# mongo
mongodb = { version = "3.1.0", optional = true }
bson = { version = "2", features = ["chrono-0_4"], optional = true }
serde = { version = "1.0.213", optional = true, features = ["derive"] }
async-trait = { version = "0.1.83", optional = true }
futures = { version = "0.3.31", optional = true }
serde_json = { version = "1.0.132", optional = true }

# websocket
actix-web-actors = { version = "4.3.1", optional = true }
actix = { version = "0.13.5", optional = true }
rand = { version = "0.8.5", optional = true }

# redis
redis = { version = "0.27.5", optional = true }
