[package]
name = "api_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
rust_helpers = { path = "../../", version = "0.1.0", features = ["web_server"] }
serde = "1.0.196"
serde_json = "1.0.113"
