[package]
name = "flow_exemples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_helpers = { path = "../../", version = "0.1.0", features = [
  "flow",
  "mongo",
  "redis",
] }
hex = "0.4.3"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
